--- a/seminarka.tex
+++ b/seminarka.tex
@@ -4,6 +4,7 @@
 \usepackage[czech]{babel}
 \usepackage{subfiles}
 \usepackage[nottoc]{tocbibind}
+\usepackage{array}
 
 \author{Adam Krška}
 \title{Stanovení parametru termočlánku pomocí metody nejmenších čtverců}
@@ -17,12 +18,18 @@
 \begin{document}
 \maketitle
 
+\newpage
 \subfile{sekce/1-uvod.tex}
+\newpage
 \subfile{sekce/2-cil_prace.tex}
+\newpage
 \subfile{sekce/3-soucasny-stav-resene-problematiky.tex}
+\newpage
 \subfile{sekce/4-vysledky.tex}
+\newpage
 \subfile{sekce/5-zaver.tex}
 
+\newpage
 \printbibliography[title={Zdroje}]
 
 \listoffigures
