--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -43,9 +43,13 @@ $\Delta T/\Delta l$, což vytváří mezi konci malé termoelektrické napětí.
 tedy velice podobný Seebeckovu efektu, ovšem zde se jedná pouze o jeden vodič
 namísto dvou různých kovů.~\cite{jreichl-thomson}
 
-\paragraph{Benedickův efekt} nebylo po dlouho dobu možno dobře kvantitativně
-měřit.  Je-li ve vodiči teplotní gradient i přes to, že teploty obou konců jsou
-identické, vzniká na koncích vodiče rozdíl potenciálů.~\cite{diplomka}
+\paragraph{Benedickův efekt} pojednává o vzniku velice malého rozdílu
+potenciálů na koncích vodiče i v případě, že oba konce mají stejnou teplotu.
+Aby tak ale nastalo musí ve vodiči existovat teplotní gradient, jenž tento
+rozdíl potenciálů způsobí.~\cite{diplomka} 
+%I když byl tento efekt objeven v~letech~1920 a~1921
+%C.~Benedicksem, po dlouhou dobu nebyl experimentálně prokázán, právě z důvodu
+%velice malé, až neměřitelné, velikosti rozdílu potenciálů.
 
 \subsubsection{Termočlánky}
 Jako termočlánky nazýváme zařízení, které se skládá ze dvou, spolu spojených,
