--- a/seminarka.tex
+++ b/seminarka.tex
@@ -15,15 +15,15 @@
 \begin{document}
 \maketitle
 
-\newpage
+%\newpage
 \subfile{sekce/1-uvod.tex}
-\newpage
+%\newpage
 \subfile{sekce/2-cil_prace.tex}
-\newpage
+%\newpage
 \subfile{sekce/3-soucasny-stav-resene-problematiky.tex}
-\newpage
+%\newpage
 \subfile{sekce/4-vysledky.tex}
-\newpage
+%\newpage
 \subfile{sekce/5-zaver.tex}
 
 \newpage
