--- a/seminarka.tex
+++ b/seminarka.tex
@@ -3,6 +3,9 @@
 \usepackage[nottoc]{tocbibind}
 \usepackage{array}
 
+%\setmainfont{Arial}
+%\renewcommand{\familydefault}{\sfdefault}
+
 \author{Adam Krška}
 \title{Stanovení parametru termočlánku pomocí metody nejmenších čtverců}
 \leader{Mgr. Roman Pavlačka, Ph.D.}
