--- a/sekce/4-vysledky.tex
+++ b/sekce/4-vysledky.tex
@@ -1,1 +1,14 @@
 \section{Výsledky}
+
+
+\subsection{Naměřená data}
+% tabulka dat
+% graf
+
+\subsection{Výpočet parametru}
+
+\subsection{Odchylky měření}
+% Odchylky přímé: https://physics.mff.cuni.cz/kfnt/nmr/download/chlan/NAFY003/prime_mereni.pdf
+% Odchylky nepřímé: https://physics.mff.cuni.cz/kfnt/nmr/download/chlan/NAFY003/neprime_mereni.pdf
+
+\subsection{Diskuze}
