--- a/sekce/3.3-experiment.tex
+++ b/sekce/3.3-experiment.tex
@@ -32,3 +32,7 @@ získal teplotu okolí.}
 
 Jako poslední jsme zasunuli vodiče do plastových trubiček a ty připevnili
 pomocí kobercové pásky k desce.
+
+\subsubsection{Aparatura experimentu}
+
+\subsubsection{Princip měření}
