--- a/seminarka.tex
+++ b/seminarka.tex
@@ -30,8 +30,11 @@
 \subfile{sekce/5-zaver.tex}
 
 \newpage
-\printbibliography[title={Zdroje}]
+\printbibliography[heading=bibnumbered,title={Seznam použité literatury}]
 
+\section{Přílohy}
+\tocotherhead{subsection}
+\tocsection
 \listoffigures
 \listoftables
 \end{document}
