--- a/sources.bib
+++ b/sources.bib
@@ -1,5 +1,5 @@
 @unpublished{praktikum,
-    author    = "Vojtěch Kumbári and Stanislav Bartoň and Ivo Křivánek",
+    author    = "Vojtěch Kumbár and Stanislav Bartoň and Ivo Křivánek",
     title     = "Fyzikální praktikum",
     year      = "2015",
     publisher = "Mendelova Univerzita",
