--- a/seminarka.tex
+++ b/seminarka.tex
@@ -28,6 +28,8 @@
 \subfile{sekce/4-vysledky.tex}
 %\newpage
 \subfile{sekce/5-zaver.tex}
+\newpage
+\subfile{sekce/souhrn.tex}
 
 \newpage
 \printbibliography[heading=bibnumbered,title={Seznam použité literatury}]
