--- a/sekce/3.1-metoda-ctvercu.tex
+++ b/sekce/3.1-metoda-ctvercu.tex
@@ -187,5 +187,5 @@ soustavy pro obě neznáme v podobě rovností~\eqref{eq:a} a~\eqref{eq:b}.
     b&=\frac{\nsumy-\frac{n\nsumxy-\nsumx\nsumy}{n\nsumxx-\(\nsumx\)^2}\nsumx}{n}\\
 %    b&=\frac{n\nsumxx\nsumy-\nsumy\(\nsumx\)^2-n\nsumxy\nsumx+\nsumy\(\nsumx\)^2}
 %    {n^2\nsumxx-n\(\nsumx\)^2}\\
-    b&=\frac{\nsumxx\nsumy-n\nsumxy\nsumx}{n\nsumxx-\(\nsumx\)^2}\lbl{eq:b}
+    b&=\frac{\nsumxx\nsumy-\nsumxy\nsumx}{n\nsumxx-\(\nsumx\)^2}\lbl{eq:b}
 }
