--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -49,14 +49,14 @@ rozdíl potenciálů způsobí.~\cite{diplomka}
 %velice malé, až neměřitelné, velikosti rozdílu potenciálů.
 
 \subsubsection{Termočlánky}
+\wrapfig[0.42\linewidth]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 Jako termočlánky nazýváme zařízení skládající se ze dvou, spolu spojených,
 druhů kovu. Ty svým spojením vytváření elektrický obvod. Jestliže budeme
 zahřívat jeden spoj kovů a ochlazovat druhý, můžeme v tomto obvodu důsledkem
 termoelektrického jevu pozorovat napětí. Toto napětí je ale velice malé, řádově
 pohybující se v milivoltech.
 
-\fullfig[width=0.5\textwidth]{figures/termoclanek.eps}[Příklad zapojení
-termočlánku]
+%\fullfig[width=0.5\textwidth][h!]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 
 Různé kombinace materiálů mají různé parametry pro vytvoření termoelektrického 
 napětí. Teoretickou hodnotu měřeného napětí můžeme zjistit z termoelektrických
