--- a/seminarka.tex
+++ b/seminarka.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,twoside,a4paper]{seminarka}
+\documentclass[12pt,twoside,a4paper]{seminarka}
 \usepackage{subfiles}
 \usepackage[nottoc]{tocbibind}
 \usepackage{array}
@@ -14,6 +14,8 @@
 \addbibresource{sources.bib}
 
 %\geometry{showframe}
+
+\podekovani{<Poděkování>} %TODO
 
 \begin{document}
 \maketitle
