--- a/sources.bib
+++ b/sources.bib
@@ -47,6 +47,26 @@
     url    = "http://ffden-2.phys.uaf.edu/212_spring2007.web.dir/sedona_price/phys_212_webproj_peltier.html"
 }
 
+@online{wolfram,
+    author   = "Eric Weisstein",
+    title    = "Least Squares Fitting",
+    subtitle = "MathWorld~-- A Wolfram Web Resource",
+    url      = "https://mathworld.wolfram.com/LeastSquaresFitting.html" 
+}
+
+@article{segeth,
+    author       = "Karel Segeth",
+    journaltitle = "Pokroky matematiky, fyziky a astronomie",
+    title        = "Od naměřených dat k jejich matematickému popisu pomocí funkce -- a zase zpátky",
+    url          = "https://dml.cz/handle/10338.dmlcz/144407",
+    volume       = "60",
+    year         = "2015",
+    number       = "2",
+    location     = "Praha",
+    pages        = "133--147",
+    issn         = "0032-2423"
+}
+
 @online{iec584,
     title  = "Thermocouple base materials acc to IEC 584",
     url    = "http://www.nanyange.com.tw/driver/drivers/Technical%20Information_02.pdf"
