--- a/sekce/3.2-termoelektrika.tex
+++ b/sekce/3.2-termoelektrika.tex
@@ -31,7 +31,8 @@ napětí.~\cite{jreichl-seebeck}
 objeven Jeanem Peltierem v roce 1834 a~dokazuje, že změna potenciálů, tedy
 protékání proudu, může způsobit změnu teplot. To implikuje přenos tepla
 z~jednoho konce na druhý, což může být využito například pro chlazení předmětu
-bez nutnosti jakýchkoliv pohybujících se součástek.~\cite{peltier}
+bez nutnosti jakýchkoliv pohybujících se součástek.~\cite{jreichl-peltier, 
+peltier}
 
 \paragraph{Thomsonův efekt} je třetí efekt v rámci termoelektrického jevu.
 Popisuje vlastnost vodiče při zahřívání jednoho z jeho konců. Zahříváním
@@ -49,14 +50,14 @@ rozdíl potenciálů způsobí.~\cite{diplomka}
 %velice malé, až neměřitelné, velikosti rozdílu potenciálů.
 
 \subsubsection{Termočlánky}
-\wrapfig[0.42\linewidth]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
+%\wrapfig[0.42\linewidth]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 Jako termočlánky nazýváme zařízení skládající se ze dvou, spolu spojených,
 druhů kovu. Ty svým spojením vytváření elektrický obvod. Jestliže budeme
 zahřívat jeden spoj kovů a ochlazovat druhý, můžeme v tomto obvodu důsledkem
 termoelektrického jevu pozorovat napětí. Toto napětí je ale velice malé, řádově
 pohybující se v milivoltech.
 
-%\fullfig[width=0.5\textwidth][h!]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
+\fullfig[width=0.5\textwidth][h!]{figures/termoclanek.eps}[Příklad zapojení termočlánku]
 
 Různé kombinace materiálů mají různé parametry pro vytvoření termoelektrického 
 napětí. Teoretickou hodnotu měřeného napětí můžeme zjistit z termoelektrických
